--- a/styles/contatos.css
+++ b/styles/contatos.css
@@ -5,7 +5,7 @@
 
 :root {
 
-    --aside-color: #E7F2EF;
+    --contatos-color: #E7F2EF;
 
     --text-color: #ffffff;
     --body-color: #708993;
@@ -44,7 +44,7 @@
   display: flex;
   flex-direction: column;
   padding: 2%;
-  background-color: var(--aside-color);
+  background-color: var(--contatos-color);
   border-radius: 5px;
 
 }
