--- a/styles/sobremim.css
+++ b/styles/sobremim.css
@@ -8,7 +8,7 @@
 
     --aside-color: #8DA3AC;
     --container-color: #7f969c; 
-    --borda-color: #00bcd4;
+ 
   
 
 
@@ -28,18 +28,9 @@
 =========================================================================================================================================*/
 
 
-.main { 
-    margin-top: 18vh;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    height: 100vh;
-}
 
 
-
-.main-titulo {
+.sobremim-titulo {
   font-family: var(--text-fonte-2);
   font-size: clamp(1.8rem, 4vw, 3rem);        /* font-size: 1.6vw; */
   font-weight: 700;
@@ -48,47 +39,47 @@
 }
 
 
-.main-foto {
+.sobremim-foto {
     width: clamp(8rem, 20vw, 15rem);        /* width: 10vw; */
     height: clamp(8rem, 20vw, 15rem);       /* height: 10vw; */
     border-radius: 50%;
-    border: 4px solid var(--borda-color);
+    border: 4px solid var(--aside-color);
     margin-bottom: 3%;
     object-fit: cover;
 }
 
-.main-conteudo {
+.sobremim-conteudo {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 4%;
   }
 
 
-.main-conteudo p {
+.sobremim-conteudo p {
   font-size: clamp(1rem, 1.2vw, 1.15rem);     /* font-size: 0.95vw; */
   color: var(--text-color);
   font-family: var(--text-fonte-2);
   text-wrap: wrap;
   width: 45%;
-  margin-left: 30%;
   text-align: justify;
   line-height: 1.3em;
   margin-bottom: 1%;
   margin-top: 1%;
 }
 
-.main-conteudo p mark {
+.sobremim-conteudo p mark {
   background-color:var(--hover-color);
   color: var(--text-color);
 }
 
 
-.main-conteudo-gif{
+.sobremim-conteudo-gif{
     width: 30%;      
     height: auto;
     margin-bottom: 5%;
     margin-top: 5%;
-    margin-left: 10%;
+
 }
 
 /* ============================================================================================================================= */
@@ -96,9 +87,8 @@
 
 
 @media (max-width: 685px) {
-    .main-conteudo p {
-    margin-left: 11%;
+    .sobremim-conteudo p {
     line-height: 1.2em;
-    width: 64%
+    width: 75%
   }
 }
