--- a/styles/header.css
+++ b/styles/header.css
@@ -50,14 +50,18 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-	line-height: 1; /* Define altura de linha neutra */
-  background: var(--body-color);
-  height: 100vh;          /* Full height of viewport */
-  width: 100vw;
-  display: flex; 
-  flex-direction: column; 
-  overflow-x: hidden;
+    line-height: 1;
+    background: var(--body-color);
+
+    min-height: 100vh;   /* ← ESSENCIAL */
+    width: 100vw;
+
+    display: flex;
+    flex-direction: column;
+
+    overflow-x: hidden;
 }
+
 
 ol, ul {
 	list-style: none; /* Remove marcadores de listas */
